<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="343dp"
        android:layout_height="404dp"
        android:src="@drawable/ic_main_paint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/imprima"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="28dp"

        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semi_bold"
            android:gravity="center"
            android:text="@string/Programmer"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/istokweb_bold"
            android:gravity="center"
            android:text="@string/Introductory_text"
            android:textColor="@color/gray"
            android:textSize="12dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/authorization"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_btn"
            android:fontFamily="@font/istokweb_bold"
            android:text="@string/Autorization"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="@font/istokweb_bold"
                android:gravity="right"
                android:text="Нет аккаунта? "
                android:textColor="@color/gray"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/RegBtn"
                android:layout_width="wrap_content"
                android:fontFamily="@font/istokweb_bold"
                android:textColor="@color/gray"
                android:textSize="12dp"
                android:gravity="left"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/Registration" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>